welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:4: error: Unmatched closing brace '}' ignored here
		if (nums(i)==4)}
                               ^arrayFront9:7: error: ';' expected but 'else' found.
		else {return false}
                ^arrayFront9:10: error: Unmatched closing brace '}' ignored here
 }
 ^